--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
-<!-- HTML for static distribution bundle build -->
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8">
-    <title>Swagger UI</title>
-    <link rel="stylesheet" type="text/css" href="dist/swagger-ui.css" />
-    <link rel="stylesheet" type="text/css" href="dist/index.css" />
-    <link rel="icon" type="image/png" href="dist/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="dist/favicon-16x16.png" sizes="16x16" />
+    <title>API Documentation</title>
+    <link rel="stylesheet" type="text/css" href="./dist/swagger-ui.css" />
   </head>
-
   <body>
+    <!-- Dropdown to select API version -->
+    <div style="padding: 20px">
+      <select id="apiVersion" onchange="loadSpec(this.value)">
+        <option value="">Select Documentation API</option>
+        <option value="./basic_and_full_request.json">
+          Basic and Full Request
+        </option>
+        <option value="./check_status_snap_wallet.json">
+          SNAP API E-Wallet
+        </option>
+      </select>
+    </div>
+    <!-- Swagger UI container -->
     <div id="swagger-ui"></div>
-    <script src="dist/swagger-ui-bundle.js" charset="UTF-8"> </script>
-    <script src="dist/swagger-ui-standalone-preset.js" charset="UTF-8"> </script>
-    <script src="dist/swagger-initializer.js" charset="UTF-8"> </script>
+    <script src="./dist/swagger-ui-bundle.js"></script>
+    <script src="./dist/swagger-ui-standalone-preset.js"></script>
+    <script src="./dist/swagger-initializer.js"></script>
   </body>
 </html>
